# SMITProject

./: .flake8  .gitignore  .isort.cfg  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/v1/: rate.py
src/core/: config.py
src/database/: .env_example  config.py  models.py
src/db/: psql.py  redis.py
src/db_service/: psql.py
src/models/: models.py
src/services/: rate.py
